added small margin to form elements

--- a/css/feedback.css
+++ b/css/feedback.css
@@ -1,3 +1,9 @@
 .form-radios .form-item {
     display:inline;
 }
+.form-checkboxes .form-item {
+    margin-bottom: 5px;
+}
+.form-item label {
+    margin-bottom: 5px;
+}
